K8s/common/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: Centrall-Loadbalncer
  namespace: colab-app
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
    - port: 443
      targetPort: https
      protocol: TCP
      name: https
  selector:
    app.kubernetes.io/name: ingress-nginx-router
